--- a/404.html
+++ b/404.html
@@ -9,16 +9,16 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://elektroenchen.github.io/kochbuch/404.html">
-<link crossorigin="anonymous" href="/kochbuch/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://elektroenchen.github.io/kochbuch/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://elektroenchen.github.io/kochbuch/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://elektroenchen.github.io/kochbuch/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://elektroenchen.github.io/kochbuch/apple-touch-icon.png">
-<link rel="mask-icon" href="https://elektroenchen.github.io/kochbuch/safari-pinned-tab.svg">
+<link rel="canonical" href="https://example.org/404.html">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://example.org/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://example.org/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://example.org/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://example.org/apple-touch-icon.png">
+<link rel="mask-icon" href="https://example.org/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="https://elektroenchen.github.io/kochbuch/404.html">
+<link rel="alternate" hreflang="en" href="https://example.org/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -55,7 +55,7 @@
         }
 
     </style>
-</noscript><meta property="og:url" content="https://elektroenchen.github.io/kochbuch/404.html">
+</noscript><meta property="og:url" content="https://example.org/404.html">
   <meta property="og:site_name" content="Zimmers Kochbuch">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:locale" content="en-us">
@@ -81,7 +81,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://elektroenchen.github.io/kochbuch/" accesskey="h" title="Zimmers Kochbuch (Alt + H)">Zimmers Kochbuch</a>
+            <a href="https://example.org/" accesskey="h" title="Zimmers Kochbuch (Alt + H)">Zimmers Kochbuch</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -107,18 +107,18 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://elektroenchen.github.io/kochbuch/categories/" title="Kategorien">
-                    <span>Kategorien</span>
+                <a href="https://example.org/search/" title="Suchen">
+                    <span>Suchen</span>
                 </a>
             </li>
             <li>
-                <a href="https://elektroenchen.github.io/kochbuch/tags/" title="Schlagworte">
+                <a href="https://example.org/tags/" title="Schlagworte">
                     <span>Schlagworte</span>
                 </a>
             </li>
             <li>
-                <a href="https://elektroenchen.github.io/kochbuch/search/" title="Suchen">
-                    <span>Suchen</span>
+                <a href="https://example.org/categories/" title="Kategorien">
+                    <span>Kategorien</span>
                 </a>
             </li>
         </ul>
@@ -129,7 +129,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="https://elektroenchen.github.io/kochbuch/">Zimmers Kochbuch</a></span> · 
+        <span>&copy; 2025 <a href="https://example.org/">Zimmers Kochbuch</a></span> · 
 
     <span>
         Powered by
